# TravelAgenda

./: Readme.md  pyproject.toml  requirements.txt  travel.sql
agenda/agenda/: settings.py  urls.py
agenda/travel/: models.py  serializers.py  views.py
agenda/travel/migrations/: 0001_initial.py
apiClient/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
apiClient/e2e/src/: app.e2e-spec.ts
apiClient/src/: index.html
apiClient/src/app/: app-routing.module.ts  app.component.spec.ts  app.module.ts  post.ts
apiClient/src/app/_services/: api.service.ts
apiClient/src/app/login/: login.component.html  login.component.ts
apiClient/src/app/navbar/: navbar.component.html
apiClient/src/app/post-detail/: post-detail.component.html  post-detail.component.ts
apiClient/src/app/posts/: posts.component.html  posts.component.ts
